syntax = "proto3";

option java_multiple_files = true;
option java_package = "CropManagementService";
option java_outer_classname = "CropManagementServiceImpl";

package CropManagementService;

service CropManagementService {
    rpc GetGrowthStatus (GrowthStatusRequest) returns (GrowthStatusResponse);
    rpc StreamLightingData (LightingDataRequest) returns (stream LightingDataResponse);
    rpc ControlPestControl (stream PestControlRequest) returns (stream PestControlResponse);
}

message GrowthStatusRequest {}

message GrowthStatusResponse {
    string status = 1;
}

message LightingDataRequest {}

message LightingDataResponse {
    int32 intensity = 1;
    int32 duration = 2;
}

message PestControlRequest {
    string command = 1;
    int32 value = 2;
}

message PestControlResponse {
    string dispenserStatus = 1;
    float chemicalAmount = 2;
}
